# esp_wifi_collar

./: CMakeLists.txt  ESP_GRPC_CONVERSATION_NOTES.md  ESP_NRF_SYSTEM_CONTRACT.md  HANDOFF.md  NRF_ESP_FLASH_BRIDGE_SPEC.md  README.md  log.txt  sdkconfig
.migration_backup_v17_1/: app_manager.c  dialog_downlink.c
components/app/: CMakeLists.txt  app_manager.c
components/app/dialog/: dialog_connection.c  dialog_connection.h  dialog_downlink.c  dialog_downlink.h  dialog_orchestrator.c  dialog_playback.c  dialog_playback.h  dialog_session.c  dialog_session.h  dialog_uplink.c  dialog_uplink.h
components/app/include/app/: app_manager.h  dialog_orchestrator.h
components/audio_dsp/: CMakeLists.txt  audio_denoise.c  speex_echo_stub.c
components/audio_dsp/include/audio_dsp/: audio_denoise.h
components/bsp/: CMakeLists.txt  bsp_board.c  microphone_input.c  speaker_output.c
components/conversation/: CMakeLists.txt  conversation_client_manual.c  idf_component.yml
components/kernel/: CMakeLists.txt  kernel.c  kernel_msgbus.c  kernel_supervisor.c  kernel_trace.c  kernel_workqueue.c
components/platform_hal/: CMakeLists.txt  hal_system.c  log_control.c
components/proto_gen/: CMakeLists.txt  idf_component.yml  traini.pb.c  traini.pb.h
components/services/: CMakeLists.txt  cloud_service.c  conversation_service.c  dns_server.c  wifi_service.c  (+2 more)
main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  firmware_version.h
protocol/: traini.options  traini.proto
tools/: WINDOWS_MIC_UDP_CAPTURE.md  mic_udp_capture.py  nrf_shared_uart_flash.py  virtual_conversation_client.py
(+17 files in other folders)
